# Steamwheedle-Cogs

./: README.md  main.py
Recruit2/: pyproject.toml
Recruit2/recruit2/: __init__.py
Recruit2/tests/: test_example.py
deck/: README.md  __init__.py  deck.py  dl.py  info.json
fifo/: README.md
freegames/common/: models.py
recruit/: README.md  __init__.py  dl.py  recruit.py  recruit_test.py  sheets.py
roster/: README.md  __init__.py  info.json  recruit.py  roster.py
welcome/: info.json  welcome.py
